03_microservice_final/item-service/h2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h2-deployment
  namespace: micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: h2
  template:
    metadata:
      labels:
        app: h2
    spec:
      containers:
        - name: h2
          image: oscarfonts/h2:2.1.210
          ports:
            - containerPort: 1521
