03_microservice_final/item-service/h2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h2-service
  namespace: micro
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 1521
      targetPort: 1521
  selector:
    app: h2
