03_microservice_final/item-service/item-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: item-ingress
  namespace: micro
spec:
  rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: item-service-service
                port:
                  number: 8080
